Added model objects

--- a/application.properties
+++ b/application.properties
@@ -1,10 +1,13 @@
 #Griffon Metadata file
-#Thu Sep 27 09:14:12 CEST 2012
+#Tue Oct 09 10:30:12 CEST 2012
 app.griffon.version=1.1.0
 app.name=jttslite
 app.toolkit=swing
 app.version=0.1
 archetype.default=1.1.0
 plugins.eclipse-support=0.6.2
+plugins.glazedlists=0.9
+plugins.miglayout=0.4
+plugins.oxbow=0.4
 plugins.spring=1.1.0
 plugins.swing=1.1.0
