Restarted from scratch with "jumpstart" archetype

--- a/application.properties
+++ b/application.properties
@@ -1,11 +1,12 @@
 #Griffon Metadata file
-#Tue Oct 09 10:30:12 CEST 2012
+#Mon Oct 15 08:56:02 CEST 2012
 app.griffon.version=1.1.0
 app.name=jttslite
 app.toolkit=swing
 app.version=0.1
-archetype.default=1.1.0
-plugins.eclipse-support=0.6.2
+archetype.jumpstart=1.4
+plugins.docking-frame=0.5
+plugins.fatcowicons=0.1
 plugins.glazedlists=0.9
 plugins.miglayout=0.4
 plugins.oxbow=0.4
