Restarted from scratch with "jumpstart" archetype

--- a/application.properties
+++ b/application.properties
@@ -1,14 +1,20 @@
 #Griffon Metadata file
-#Mon Oct 15 08:56:02 CEST 2012
+#Mon Oct 22 09:39:26 CEST 2012
 app.griffon.version=1.1.0
 app.name=jttslite
 app.toolkit=swing
 app.version=0.1
 archetype.jumpstart=1.4
+plugins.charts=1.0.0
+plugins.datasource=0.4
 plugins.docking-frame=0.5
 plugins.fatcowicons=0.1
 plugins.glazedlists=0.9
+plugins.gsql=1.0
+plugins.jbusycomponent=1.0.0
+plugins.jxlayer=1.0.0
 plugins.miglayout=0.4
 plugins.oxbow=0.4
-plugins.spring=1.1.0
+plugins.spring=1.1.1
 plugins.swing=1.1.0
+plugins.swingx-builder=0.7
