--- a/application.properties
+++ b/application.properties
@@ -1,11 +1,12 @@
 #Griffon Metadata file
-#Mon Oct 22 09:39:26 CEST 2012
+#Sat Oct 27 16:11:37 CEST 2012
 app.griffon.version=1.1.0
 app.name=jttslite
 app.toolkit=swing
 app.version=0.1
 archetype.jumpstart=1.4
 plugins.charts=1.0.0
+plugins.css-builder=1.0.0
 plugins.datasource=0.4
 plugins.docking-frame=0.5
 plugins.fatcowicons=0.1
@@ -16,5 +17,5 @@ plugins.jxlayer=1.0.0
 plugins.miglayout=0.4
 plugins.oxbow=0.4
 plugins.spring=1.1.1
-plugins.swing=1.1.0
+plugins.swing=1.0.0
 plugins.swingx-builder=0.7
