--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Griffon Metadata file
-#Sat Oct 27 16:11:37 CEST 2012
+#Mon Oct 29 08:44:26 CET 2012
 app.griffon.version=1.1.0
 app.name=jttslite
 app.toolkit=swing
