--- a/application.properties
+++ b/application.properties
@@ -1,21 +1,21 @@
 #Griffon Metadata file
-#Mon Dec 10 09:36:17 CET 2012
-app.griffon.version=1.1.0
+#Sat Dec 22 15:48:45 CET 2012
+app.griffon.version=1.2.0-SNAPSHOT
 app.name=jttslite
 app.toolkit=swing
 app.version=0.1
 archetype.jumpstart=1.4
 plugins.charts=1.0.0
 plugins.css-builder=1.0.0
-plugins.datasource=0.4
-plugins.docking-frame=0.5
-plugins.fatcowicons=0.1
+plugins.datasource=0.5
+plugins.docking-frame=1.0.0
+plugins.fatcowicons=1.0.0
 plugins.glazedlists=1.1.0
 plugins.gsql=1.0
 plugins.jbusycomponent=1.0.0
 plugins.jxlayer=1.0.0
-plugins.miglayout=0.4
-plugins.oxbow=0.4
-plugins.spring=1.1.1
-plugins.swing=1.1.0
+plugins.miglayout=1.0.0
+plugins.oxbow=1.0.0
+plugins.spring=1.1.2
+plugins.swing=1.2.0
 plugins.swingx-builder=0.7
