--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         mavenRepo name: 'Grails Central', url: 'http://repo.grails.org/grails/core/'
         mavenRepo name: 'JavaNet',        url: 'http://download.java.net/maven/2/'
 	flatDir dirs: 'gradle-lib'
+//	ivy {url 'gradle-ivy-repo'}
 	//mavenLocal()
     }
 
@@ -16,19 +17,47 @@ buildscript {
         classpath('org.spockframework:spock-core:0.7-groovy-1.8')//added to obviate missing of griffon-launcher-1.1.0-SNAPSHOT.pom and adapteed for groovy 1.8.x
         classpath('org.apache.ant:ant:1.8.2')//added to obviate missing of griffon-launcher-ant-1.1.0-SNAPSHOT.pom
         classpath('org.codehaus.griffon:griffon-scripts:1.1.0')
+        //classpath(':groovy-all:2.0.5')
     }
 }
 
-griffonVersion = '1.1.0'
+griffonVersion = '1.2.0-SNAPSHOT'
 version = '0.1'
 
+apply plugin: 'groovy'
 apply plugin: 'griffon'
 
 repositories {
     mavenCentral()
     mavenRepo name: 'Codehaus', url: 'http://repository.codehaus.org/'
+    flatDir dirs: 'gradle-lib'
+}
+
+configurations {
+    all*.exclude group: 'org.codehaus.groovy', module: 'groovy-all', version: '1.8.0'
 }
 
 dependencies {
     compile "org.codehaus.griffon:griffon-rt:$griffonVersion"
+    //hacked to rebuild griffon deps
+    bootstrap module (":groovy-all:2.0.5") {
+        dependencies ":slf4j-api:1.7.2",
+            ":slf4j-log4j12:1.7.2",
+            ":org.springframework.core:3.1.2.RELEASE",
+            ":jcl-over-slf4j:1.7.2",
+            ":gant_groovy2.0:1.9.8",
+            ":asm:3.2",
+            ":log4j:1.2.17",
+            ":http-builder:0.5.2",
+            ":httpclient:4.1.2",
+            ":httpcore:4.1.2",
+            ":json-lib:2.4:jdk15",
+            ":xml-resolver:1.2",
+            ":ant:1.8.4",
+            ":commons-lang:2.6",
+            ":ant-launcher:1.8.4",
+            ":commons-io:2.4",
+            ":commons-collections:3.2.1"
+            ":junit:4.10"
+    }
 }
