--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Griffon Metadata file
-#Wed Dec 26 15:21:55 CET 2012
+#Tue Jan 08 09:29:14 CET 2013
 app.griffon.version=1.2.0-SNAPSHOT
 app.name=jttslite
 app.toolkit=swing
@@ -14,6 +14,7 @@ plugins.glazedlists=1.1.0
 plugins.gsql=1.0
 plugins.jbusycomponent=1.0.0
 plugins.jxlayer=1.0.0
+plugins.liquibase=0.1
 plugins.miglayout=1.0.0
 plugins.oxbow=1.0.0
 plugins.spring=1.1.2
