switched to griffon 1.2.0

--- a/application.properties
+++ b/application.properties
@@ -1,9 +1,10 @@
 #Griffon Metadata file
-#Tue Jan 08 09:29:14 CET 2013
-app.griffon.version=1.2.0-SNAPSHOT
+#Fri Jan 11 11:25:29 CET 2013
+app.griffon.version=1.2.0
 app.name=jttslite
 app.toolkit=swing
 app.version=0.1
+archetype.default=1.2.0
 archetype.jumpstart=1.4
 plugins.charts=1.0.0
 plugins.css-builder=1.0.0
@@ -17,6 +18,5 @@ plugins.jxlayer=1.0.0
 plugins.liquibase=0.1
 plugins.miglayout=1.0.0
 plugins.oxbow=1.0.0
-plugins.spring=1.1.2
 plugins.swing=1.2.0
 plugins.swingx-builder=0.7
