--- a/wrapper/griffon-wrapper.properties
+++ b/wrapper/griffon-wrapper.properties
@@ -1,5 +1,7 @@
+#Griffon 1.2.0 upgrade
+#Fri Jan 11 11:15:20 CET 2013
 distributionBase=GRIFFON_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRIFFON_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=http\://dist.codehaus.org/griffon/griffon-1.2.0-SNAPSHOT-bin.zip
+distributionUrl=http\://dist.codehaus.org/griffon/griffon-1.2.0-bin.zip
