--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Griffon Metadata file
-#Fri Jan 11 11:25:29 CET 2013
+#Wed Jan 16 21:22:20 CET 2013
 app.griffon.version=1.2.0
 app.name=jttslite
 app.toolkit=swing
@@ -8,15 +8,17 @@ archetype.default=1.2.0
 archetype.jumpstart=1.4
 plugins.charts=1.0.0
 plugins.css-builder=1.0.0
-plugins.datasource=0.5
+plugins.datasource=1.1.0
 plugins.docking-frame=1.0.0
 plugins.fatcowicons=1.0.0
 plugins.glazedlists=1.1.0
-plugins.gsql=1.0
+plugins.gsql=1.1.1
 plugins.jbusycomponent=1.0.0
 plugins.jxlayer=1.0.0
 plugins.liquibase=0.1
+plugins.lombok=0.4
 plugins.miglayout=1.0.0
 plugins.oxbow=1.0.0
+plugins.spring=1.2.0
 plugins.swing=1.2.0
 plugins.swingx-builder=0.7
