Imported icons from svn

--- a/application.properties
+++ b/application.properties
@@ -1,9 +1,9 @@
 #Griffon Metadata file
-#Wed Jan 16 21:22:20 CET 2013
+#Tue Jan 22 09:03:43 CET 2013
 app.griffon.version=1.2.0
 app.name=jttslite
 app.toolkit=swing
-app.version=0.1
+app.version=3.0.0-SNAPSHOT
 archetype.default=1.2.0
 archetype.jumpstart=1.4
 plugins.charts=1.0.0
@@ -14,11 +14,14 @@ plugins.fatcowicons=1.0.0
 plugins.glazedlists=1.1.0
 plugins.gsql=1.1.1
 plugins.jbusycomponent=1.0.0
+plugins.jide-builder=1.0.0
 plugins.jxlayer=1.0.0
 plugins.liquibase=0.1
 plugins.lombok=0.4
 plugins.miglayout=1.0.0
 plugins.oxbow=1.0.0
+plugins.splash=1.0.0
 plugins.spring=1.2.0
 plugins.swing=1.2.0
 plugins.swingx-builder=0.7
+plugins.validation=1.0.2
