--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Griffon Metadata file
-#Tue Jan 22 09:03:43 CET 2013
+#Sat Feb 09 16:37:16 CET 2013
 app.griffon.version=1.2.0
 app.name=jttslite
 app.toolkit=swing
@@ -24,4 +24,5 @@ plugins.splash=1.0.0
 plugins.spring=1.2.0
 plugins.swing=1.2.0
 plugins.swingx-builder=0.7
+plugins.tray-builder=0.8
 plugins.validation=1.0.2
