--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
 
-script: export DISPLAY=:99.0;export GRADLE_OPTS="-XX:MaxPermSize=250m -Xmx768m";./gradlew clean test
+script: export DISPLAY=:99.0;export GRADLE_OPTS="-XX:MaxPermSize=250m -Xmx768m";./gradlew --no-color --quiet clean test
