--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,8 @@
 ---
 language: java
-
 jdk:
   - oraclejdk6
-
 before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
-
-script: "export DISPLAY=:99.0;export GRADLE_OPTS='-XX:MaxPermSize=250m -Xmx768m';./gradlew -Pargs='-Dgriffon.artifact.force.upgrade=true' --no-color --quiet clean test"
+script: export DISPLAY=:99.0;export GRADLE_OPTS="-XX:MaxPermSize=250m -Xmx768m";./gradlew -Pargs='-Dgriffon.artifact.force.upgrade=true' --no-color --quiet clean test
