--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
----
 language: java
 jdk:
   - oraclejdk6
+env: DISPLAY=:99.0
+env: GRADLE_OPTS="-XX:MaxPermSize=250m -Xmx768m"
+script: ./gradlew -Pargs='-Dgriffon.artifact.force.upgrade=true' --no-color --quiet clean test
 before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
-script: export DISPLAY=:99.0;export GRADLE_OPTS="-XX:MaxPermSize=250m -Xmx768m";./gradlew -Pargs='-Dgriffon.artifact.force.upgrade=true' --no-color --quiet clean test
