--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ jdk:
   - oraclejdk6
 env: DISPLAY=:99.0
 env: GRADLE_OPTS="-XX:MaxPermSize=250m -Xmx768m"
-script: ./gradlew -Pargs='-Dgriffon.artifact.force.upgrade=true' --no-color --quiet
+script: env; ./gradlew -Pargs='-Dgriffon.artifact.force.upgrade=true' --no-color --quiet
 before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
