--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,12 @@ language: java
 jdk:
   - oraclejdk6
 env: DISPLAY=:99.0
-env: GRADLE_OPTS="-XX:MaxPermSize=250m -Xmx768m"
-script: ./griffonw -non-interactive -Dgriffon.artifact.force.upgrade=true clean test
+env: GRIFFON_OPTS="-XX:MaxPermSize=250m -Xmx768m"
+script: ./griffonw -non-interactive -Dgriffon.artifact.force.upgrade=true test-app;./griffonw -non-interactive -Dgriffon.artifact.force.upgrade=true package
+after_script:
+  - test -f ./dist/jar/jttslite-*-jar.zip
+  - test -f ./dist/applet/jttslite-*-applet.zip
+  - test -f ./dist/webstart/jttslite-*-webstart.zip
 before_install:
   - "export DISPLAY=:99.0"
   - "sh -e /etc/init.d/xvfb start"
