--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-defaultTasks 'clean', 'test', 'assemble'
+defaultTasks 'showprops', ''clean', 'test', 'assemble'
 
 buildscript {
     repositories {
