fixes for model classes introduction

--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Griffon Metadata file
-#Mon Mar 04 08:49:14 CET 2013
+#Thu Sep 26 15:05:20 CEST 2013
 app.griffon.version=1.2.0
 app.name=jttslite
 app.toolkit=swing
@@ -10,6 +10,7 @@ plugins.charts=1.0.0
 plugins.css-builder=1.0.0
 plugins.datasource=1.1.0
 plugins.docking-frame=1.0.0
+plugins.eclipse-support=0.7.1
 plugins.fatcowicons=1.0.0
 plugins.glazedlists=1.1.0
 plugins.gsql=1.1.1
